--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^10.0.0",
+    "react-phone-number-input": "^3.4.14",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
