--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@rollup/wasm-node": "4.6.0",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
@@ -39,10 +40,14 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.2.0",
     "postcss": "^8.4.35",
-    "rollup": "^4.34.0",
+    "rollup": "4.6.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
-    "vite": "^6.3.5"
+    "vite": "5.0.10"
+  },
+  "resolutions": {
+    "rollup": "4.6.0",
+    "@rollup/rollup-linux-x64-gnu": "4.6.0"
   }
 }
